--- a/translations/zh-hans.yaml
+++ b/translations/zh-hans.yaml
@@ -1128,7 +1128,7 @@ k8sPage:
         然后<a href="{downloadUrl}" target="_blank">下载</a><code>kubectl</code>(如有需要)并运行。
 
 loginPage:
-  greeting: "您好！<br>欢迎使用Lemon Cloud"
+  greeting: "您好！<br>欢迎使用Lemon Cloud应用容器集群管理"
   insecure: "{appName}仅支持<code>https://</code>连接，你必须:<br><br>使用服务器内置的TLS支持,或者<br><br>在容器前面提供自己的TLS终端。"
   githubMessage: "{appName}使用GitHub管理账号和团队。点击以下按钮以登录，我们将仅使用基本的GitHub账号信息。"
   shibbolethMessage: "{appName}使用Shibboleth管理账号。点击以下按钮以登录到设置的Shibboleth IDP。"
@@ -1297,7 +1297,7 @@ signupPage:
       loginUsername: 姓名
       email: 电子邮箱
   emailSuccess:
-    header: '欢迎使用Lemon cloud'
+    header: '欢迎使用Lemon Cloud应用容器集群管理'
     confirm:
       subtext: 已经发送邮件到您的邮箱，请点击邮件中的验证链接以确认您的邮件地址。
       resend: 重新发送邮件
@@ -4421,7 +4421,7 @@ modalEditSetting:
 
 modalEditPassword:
   firstLogin:
-    title: "欢迎使用Lemon cloud"
+    title: "欢迎使用Lemon Cloud应用容器集群管理"
     help: '第一步: 请为默认<code>admin</code>用户设置强密码'
     actionButton: 继续
   edit:
@@ -4437,7 +4437,7 @@ modalEditPassword:
     manual: '设置一个特定的密码来使用: '
 
 modalFeedback:
-  header: "欢迎使用Lemon cloud!"
+  header: "欢迎使用Lemon Cloud应用容器集群管理!"
   subtitle: "在开始使用前, 请让我们了解关于您的信息..."
   send: 开始使用
 
@@ -4527,7 +4527,7 @@ modalWechat:
   title: '扫码关注Rancher中国微信技术群'
   wechat: 微信
 modalWelcome:
-  header: "欢迎使用Lemon cloud!"
+  header: "欢迎使用Lemon Cloud应用容器集群管理!"
   closeModal: 确认
 
 namespaceGroup:
